# fpga-interchange-tests

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LIFCL-40.html  Makefile  README.md  conda_lock.yml  devices.html  env.sh  environment.yml  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  testarch.html  third_party_versions.txt  xc7a100t.html  xc7a200t.html  xc7a35t.html  xc7k160t.html  xc7k480t.html  xc7k70t.html  xc7s50.html  xc7vx980t.html  xc7z010.html  xczu7ev.html
.github/kokoro/: continuous.cfg  presubmit.cfg  test.sh
.github/kokoro/steps/: git.sh  hostinfo.sh  hostsetup.sh  xilinx.sh
.github/scripts/: centos-setup.sh  common.sh  generate_job_matrix.py  install.sh  pack-interchange-data.sh  tests.sh  ubuntu-setup.sh
.github/workflows/: ci.yml  update_conda_lock.yml  upload.yml
_sources/: LIFCL-40.rst.txt  devices.rst.txt  testarch.rst.txt  xc7a100t.rst.txt  xc7a200t.rst.txt  xc7a35t.rst.txt  xc7k160t.rst.txt  xc7k480t.rst.txt  xc7k70t.rst.txt  xc7s50.rst.txt  xc7vx980t.rst.txt  xc7z010.rst.txt  xczu7ev.rst.txt
boards/: CMakeLists.txt  boards.cmake
devices/: CMakeLists.txt  chipdb.cmake  chipdb_nexus.cmake  chipdb_testarch.cmake  chipdb_xilinx.cmake
devices/testarch/: CMakeLists.txt
devices/testarch-noffmux/: CMakeLists.txt
devices/xc7a100t/: CMakeLists.txt
devices/xc7a200t/: CMakeLists.txt
devices/xc7a35t/: CMakeLists.txt
devices/xc7k160t/: CMakeLists.txt
devices/xc7k480t/: CMakeLists.txt
devices/xc7k70t/: CMakeLists.txt
devices/xc7s25/: CMakeLists.txt
devices/xc7s50/: CMakeLists.txt
devices/xc7vx980t/: CMakeLists.txt
devices/xc7z010/: CMakeLists.txt
devices/xczu7ev/: CMakeLists.txt
report/: Makefile  requirements.txt
report/source/: conf.py  index.rst
tests/: CMakeLists.txt  arch_tests.cmake  litex.cmake  tests.cmake
tests/common/: dcp_vivado.tcl  lib_xc7.v  remap_nexus.v  remap_xcup.v  retarget_xc7.v  synth.tcl  synth_nexus.tcl  synth_testarch.tcl  synth_xc7.tcl  synth_xcup.tcl  timing_dump_vivado.tcl  vivado.tcl
tests/common/libs/: cell_sim_test.v  remap_test.v
tests/counter/: CMakeLists.txt  arty100t.xdc  arty35t.xdc  basys3.xdc  counter_tb.v
tests/designs/: CMakeLists.txt
tests/designs/counter/: CMakeLists.txt  arty_s7_25.xdc  arty_s7_50.xdc  counter.v  counter_diff_clk.v  xc7k160t_board.xdc  xc7k480t_board.xdc  xc7k70t_board.xdc  xc7vx980t_board.xdc  zcu104.xdc
tests/designs/counter_sv/: CMakeLists.txt  arty100t.xdc  arty35t.xdc  arty_s7_25.xdc  arty_s7_50.xdc  basys3.xdc  counter.sv  counter_diff_clk.sv  lifcl40evn.xdc  xc7k160t_board.xdc  xc7k480t_board.xdc  xc7k70t_board.xdc  xc7vx980t_board.xdc  zcu104.xdc
tests/designs/litex_base/: CMakeLists.txt
tests/designs/litex_ddr/: CMakeLists.txt
tests/designs/litex_linux/: CMakeLists.txt  arty.v  arty35t.xdc  mem.init  mem_2.init
tests/designs/murax/: CMakeLists.txt  arty35t.xdc  arty35t_toplevel.v  arty_s7_50.xdc  arty_s7_50_toplevel.v  basys3.xdc  basys3_toplevel.v  lifcl40evn.xdc  lifcl40evn_toplevel.v  xc7k480t_board.xdc  xc7k70t_board.xdc  xc7k70t_board_toplevel.v  xc7vx980t_board.xdc  xc7vx980t_board_toplevel.v  zcu104.xdc  zcu104_toplevel.v
tests/designs/picosoc/: CMakeLists.txt  arty35t.xdc  arty_s7_50.xdc  basys3.xdc  xc7k70t_board.xdc
tests/features/: CMakeLists.txt
tests/features/clock_gen/: CMakeLists.txt  basys3.xdc  clock_gen_tb.v  clock_gen_top.v  mmcme2.v  plle2.v
tests/features/diff_io/: CMakeLists.txt  diff_io.v  diff_io_tb.v  ibufds-basys3.xdc  ibufds-zcu104.xdc  ibufds.v  ibufds_tb.v  iobufds-basys3.xdc  iobufds-zcu104.xdc  iobufds.v  iobufds_tb.v  obufds-basys3.xdc  obufds-zcu104.xdc  obufds.v  obuftds-basys3.xdc  obuftds.v  obuftds_tb.v
tests/features/dram/: CMakeLists.txt  basys3.xdc  dram_1_128x1d.v  dram_1_256x1d.v  dram_1_256x1s.v  dram_1_256x1s_diff.v  dram_1_32m.v  dram_1_32m16.v  dram_1_32m16_diff.v  dram_1_32x16dr8.v  dram_1_512x1s.v  dram_1_64m.v  dram_1_64m8.v  dram_1_64x8sw.v  dram_1_64x8sw_diff.v  dram_2_128x1s.v  dram_2_32x1d.v  dram_2_64x1d.v  dram_4_32x1s.v  dram_4_32x2s.v  dram_4_64x1s.v  dram_8_32x1s.v  zcu104.xdc
tests/features/iobuf/: CMakeLists.txt
tests/features/lut/: CMakeLists.txt  lut.v  lut_ff.v  lut_routethru.v  lut_routethru.xdc  lut_testarch.v  testboard.xdc  zcu104.xdc
tests/features/mmcm/: CMakeLists.txt  basys3.xdc  mmcm_buf_basys3.v  mmcm_ext_basys3.v  mmcm_int_basys3.v  mmcm_int_frac_basys3.v  mmcme2_test.v  mmcme4_adv.v  zcu104.xdc
tests/features/pll/: CMakeLists.txt  basys3.xdc  pll_buf_basys3.v  pll_ext_basys3.v  pll_int_basys3.v  pll_tb.v  pll_top.v  plle2_test.v  plle3_adv.v  plle3_base.v  plle4_adv.v  plle4_base.v  util.v  zcu104.xdc
tests/features/ram/: CMakeLists.txt  ram_tb.v  zcu104.xdc
tests/features/ram36/: .ram36_tb.v.swp  CMakeLists.txt  basys3.xdc  ram36.v  ram36_tb.v
tests/features/ram_36bit/: CMakeLists.txt  ram_36bit.v  ram_36bit_diff.v  ram_36bit_tb.v  ram_36bit_zcu104.v
tests/features/ram_72bit/: CMakeLists.txt  ram_72bit.v  ram_72bit_diff.v  zcu104.xdc
tests/features/serdes/: CMakeLists.txt  basys3.xdc  iserdese3-zcu104.xdc  iserdese3.v  oserdese3-zcu104.xdc  oserdese3.v  serdes.v  serdes_test.v
tests/features/sing_io/: CMakeLists.txt  iobuf-basys3.xdc  iobuf-zcu104.xdc  iobuf.v  iobuf_tb.v  obuft-basys3.xdc  obuft-zcu104.xdc  obuft.v  obuft_tb.v
tests/features/wire/: CMakeLists.txt  wire_tb.v  zcu104.xdc
tests/lut/: CMakeLists.txt
tests/murax/: CMakeLists.txt  basys3_toplevel.v
tests/ram/: CMakeLists.txt  ram.v  ram_tb.v  run.tcl
tests/utils/: differentiate.py
tests/wire/: CMakeLists.txt  run.tcl  wire.v  wire_tb.v
utils/: aggregate_results.py  get_cpu_litex_data.py  quiet_cmd.sh  report_targets.py  run_vivado.sh  utils.cmake  utils.v
